# slack-assistant-bot-client

./: .cursorrules  .env.example  .gitignore  README.md  pyproject.toml
scripts/: delete_slack_file.py  interactive_chat.py  receive_and_save_file.py  send_dm_with_file.py  send_message.py
src/: __init__.py
src/config/: settings.py
src/core/: slack_client.py
src/services/: message_service.py
src/slack_assistant_bot_client/: __init__.py
src/utils/: logger.py  ordered_fixed_size_set.py
tests/: test_send_message.py
